<resources>
    <string name="back_button">Back</string>
    <string name="app_name">MeetUp</string>
    <string name="title_join_page">Join Event</string>
    <string name="title_creating_event_page">Create Event</string>
    <string name="title_create_event_page">Choose Place Type</string>
    <string name="title_event_created">Event Created</string>
    <string name="title_meetup_details_page">MeetUp Details</string>
　  <string name="title_place_type_and_keyword">Place Type &amp; Keywords</string>
    <string name="title_submission_complete">Submission Complete</string>
    <string name="title_small_area_selection_page">Choose Area</string>
    <string name="title_area_selecting_page">Choose Meeting Location</string>
    <string name="title_add_time_slots_page">Add Time Slots</string>
    <string name="edit_time_slot">Edit Time Slot</string>
    <string name="title_time_availability_page">Select Your Availability</string>
    <string name="title_host_dashboard">Dashboard </string>
    <string name="title_participant_dashboard">Dashboard </string>
    <string name="title_date_and_area">Date &amp; Area</string>
    <string name="title_event_list_page">Event List</string>
    <string name="title_place_list">Place List</string>
    <string name="title_place_details">Place Details</string>
    <string name="edit_selection">Edit Your Selection</string>
    <string name="time_to_close_voting">All participants have submitted! \nTime to close place voting!</string>
    <string name="place_voting_started">Place voting has started! \nOpen the app to vote for your favorite spot.</string>
    <string name="event_finalized_message">Your meeting has been finalized! \nOpen the app to see the final plan.</string>
</resources>