...

                AppMultiSelectDropdown(
                    options = countryOptions,
                    selected = countryOptions.filter { it.code in selectedCountries },
                    onToggle = onCountryToggle,
                    label = "Select Countries",
                    instruction = "Search Countries",
                    toText = { it.toString() },
                )
            }

            item {
                Spacer(modifier = Modifier.height(AppSpacing.xl))

                AppMultiSelectDropdown(
                    options = cityOptions,
                    selected = selectedCities,
                    onToggle = onCityChange,
                    label = "Select Cities",
                    instruction = "Type city's name",
                    toText = { it },
                )
            }

            item {
                Spacer(modifier = Modifier.height(AppSpacing.xl))
...
