package com.meetup.meetingapp.data.model

enum class CountryOptions {
    Finland
}